<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackground"
    tools:context=".ui.view.LoginFragment">

    <View
        android:id="@+id/beige"
        android:layout_width="300dp"
        android:layout_height="550dp"
        android:background="@drawable/beige_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserratblack"
        android:text="@string/title_petit"
        android:textColor="@color/brown"
        android:textSize="64sp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="@+id/beige"
        app:layout_constraintStart_toStartOf="@+id/beige"
        app:layout_constraintTop_toTopOf="@+id/beige" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserratregular"
        android:text="@string/title_diary"
        android:textColor="@color/brown"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/beige"
        app:layout_constraintStart_toStartOf="@+id/beige"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email"
        android:fontFamily="@font/montserratregular"
        android:textSize="16sp"
        android:textColor="@color/brown"
        android:textColorHint="@color/brown"
        android:backgroundTint="@color/brown"
        android:layout_marginTop="27dp"
        app:layout_constraintEnd_toEndOf="@+id/beige"
        app:layout_constraintStart_toStartOf="@+id/beige"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
    <EditText
        android:id="@+id/editPass"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_pass"
        android:fontFamily="@font/montserratregular"
        android:textSize="16sp"
        android:textColor="@color/brown"
        android:textColorHint="@color/brown"
        android:backgroundTint="@color/brown"
        android:layout_marginTop="27dp"
        app:layout_constraintEnd_toEndOf="@+id/beige"
        app:layout_constraintStart_toStartOf="@+id/beige"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="230dp"
        android:layout_height="47dp"
        android:background="@drawable/whitebutton"
        android:fontFamily="@font/montserratregular"
        android:text="@string/button_login"
        android:textColor="@color/brown"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/beige"
        app:layout_constraintStart_toStartOf="@+id/beige"
        app:layout_constraintTop_toBottomOf="@+id/editPass" />

    <ImageView
        android:id="@+id/dog"
        android:layout_width="130dp"
        android:layout_height="125dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"
        android:src="@drawable/standnigdog"
        app:layout_constraintBottom_toBottomOf="@+id/beige"
        app:layout_constraintEnd_toEndOf="@+id/beige"
        app:layout_constraintStart_toStartOf="@+id/beige"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/btnDontHaveAcc"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_donthaveacc"
        android:textSize="16sp"
        android:fontFamily="@font/montserratregular"
        android:textColor="@color/brown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="28dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>