<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.view.MyDiaryFragment">

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="87dp"
        android:background="@drawable/back_icon"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toStartOf="@+id/title_newpet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <TextView
        android:id="@+id/title_newpet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserratblack"
        android:text="@string/title_changeprofile"
        android:textColor="@color/brown"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_marginTop="39dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/window"
        android:layout_width="324dp"
        android:layout_height="537dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/grey_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_newpet">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/circle"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:fontFamily="@font/montserratregular"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="@+id/window"
            app:layout_constraintStart_toStartOf="@+id/window"
            app:layout_constraintTop_toBottomOf="@+id/profileImage" />
        <EditText
            android:id="@+id/editEmail"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"
            android:fontFamily="@font/montserratregular"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:layout_marginTop="27dp"
            app:layout_constraintEnd_toEndOf="@+id/window"
            app:layout_constraintStart_toStartOf="@+id/window"
            app:layout_constraintTop_toBottomOf="@+id/editName" />
        <EditText
            android:id="@+id/editPass"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pass"
            android:fontFamily="@font/montserratregular"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:layout_marginTop="27dp"
            app:layout_constraintEnd_toEndOf="@+id/window"
            app:layout_constraintStart_toStartOf="@+id/window"
            app:layout_constraintTop_toBottomOf="@+id/editEmail" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnChangeAcc"
            android:layout_width="230dp"
            android:layout_height="47dp"
            android:background="@drawable/whitebutton"
            android:fontFamily="@font/montserratregular"
            android:text="@string/button_change"
            android:textColor="@color/brown"
            android:textSize="16sp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/window"
            app:layout_constraintStart_toStartOf="@+id/window"
            app:layout_constraintTop_toBottomOf="@+id/editPass" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/btnDeleteAcc"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_deleteprofile"
        android:textSize="16sp"
        android:fontFamily="@font/montserratregular"
        android:textColor="@color/brown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="28dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>