<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackground"
    tools:context=".ui.view.LoginFragment">

    <View
        android:id="@+id/beige"
        android:layout_width="300dp"
        android:layout_height="550dp"
        android:background="@drawable/beige_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserratblack"
        android:text="@string/title_petit"
        android:textColor="@color/brown"
        android:textSize="64sp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="@+id/beige"
        app:layout_constraintStart_toStartOf="@+id/beige"
        app:layout_constraintTop_toTopOf="@+id/beige" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserratregular"
        android:text="@string/title_diary"
        android:textColor="@color/brown"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/beige"
        app:layout_constraintStart_toStartOf="@+id/beige"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegistration"
        android:layout_width="230dp"
        android:layout_height="47dp"
        android:background="@drawable/whitebutton"
        android:fontFamily="@font/montserratregular"
        android:text="@string/button_registraion"
        android:textColor="@color/brown"
        android:textSize="16sp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="@+id/beige"
        app:layout_constraintStart_toStartOf="@+id/beige"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="230dp"
        android:layout_height="47dp"
        android:background="@drawable/whitebutton"
        android:text="@string/button_login"
        android:fontFamily="@font/montserratregular"
        android:textColor="@color/brown"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/beige"
        app:layout_constraintStart_toStartOf="@+id/beige"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistration" />

    <ImageView
        android:id="@+id/dog"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"
        android:src="@drawable/sittingdog"
        app:layout_constraintBottom_toBottomOf="@+id/beige"
        app:layout_constraintEnd_toEndOf="@+id/beige"
        app:layout_constraintStart_toStartOf="@+id/beige"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>