<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/window"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".ui.view.fragments.NewTreatmentDialog">

    <View
        android:layout_width="324dp"
        android:layout_height="537dp"
        android:background="@drawable/white_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/noteWindow"
        android:layout_width="324dp"
        android:layout_height="100dp"
        android:background="@drawable/rectangle_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTreatment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserratblack"
        android:text="@string/title_newtreatment"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_text"
        android:maxLines="1"
        android:fontFamily="@font/montserratregular"
        android:textSize="16sp"
        android:textColor="@color/grey"
        android:textColorHint="@color/grey"
        android:backgroundTint="@color/grey"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@+id/window"
        app:layout_constraintStart_toStartOf="@+id/window"
        app:layout_constraintTop_toBottomOf="@+id/noteWindow" />
    
    <EditText
        android:id="@+id/editDate"
        android:focusable="false"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:hint="@string/hint_date"
        android:fontFamily="@font/montserratregular"
        android:textSize="16sp"
        android:textColor="@color/grey"
        android:textColorHint="@color/grey"
        android:backgroundTint="@color/grey"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/window"
        app:layout_constraintStart_toStartOf="@+id/window"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/editNote"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_note"
        android:maxLines="4"
        android:fontFamily="@font/montserratregular"
        android:textSize="16sp"
        android:textColor="@color/grey"
        android:textColorHint="@color/grey"
        android:backgroundTint="@color/grey"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/window"
        app:layout_constraintStart_toStartOf="@+id/window"
        app:layout_constraintTop_toBottomOf="@+id/editDate" />
    
    <TextView
        android:id="@+id/txtChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserratregular"
        android:text="@string/choose_icon"
        android:textColor="@color/grey"
        android:textSize="16sp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/editNote"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/chooseIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtChoose">
        <RadioButton
            android:id="@+id/medicineIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/grey"
            android:drawableRight="@drawable/medicine_icon_grey"/>
        <RadioButton
            android:id="@+id/clinicIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/grey"
            android:drawableRight="@drawable/clinic_icon_grey"/>
        <RadioButton
            android:id="@+id/tabletIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/grey"
            android:drawableRight="@drawable/tablet_icon_grey"/>
        <RadioButton
            android:id="@+id/searchIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/grey"
            android:drawableRight="@drawable/search_icon_grey"/>
    </RadioGroup>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNewTreatment"
        android:layout_width="230dp"
        android:layout_height="47dp"
        android:background="@drawable/grey_rectangle"
        android:fontFamily="@font/montserratregular"
        android:text="@string/button_newpet"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/window"
        app:layout_constraintStart_toStartOf="@+id/window"
        app:layout_constraintTop_toBottomOf="@+id/chooseIcon" />
</androidx.constraintlayout.widget.ConstraintLayout>