<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.view.EditPetFragment">

<!--    <ImageButton-->
<!--        android:layout_width="40dp"-->
<!--        android:layout_height="40dp"-->
<!--        android:background="@drawable/back_icon"-->
<!--        android:layout_marginTop="50dp"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/title_newpet"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <TextView
        android:id="@+id/title_newpet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserratblack"
        android:text="@string/title_editpet"
        android:textColor="@color/brown"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_marginTop="39dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/window"
        android:layout_width="324dp"
        android:layout_height="537dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/grey_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_newpet">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/petImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/circle"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:fontFamily="@font/montserratregular"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:layout_marginTop="37dp"
            app:layout_constraintEnd_toEndOf="@+id/window"
            app:layout_constraintStart_toStartOf="@+id/window"
            app:layout_constraintTop_toBottomOf="@+id/petImage" />
        <EditText
            android:id="@+id/editBirthday"
            android:focusable="false"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/hint_birthday"
            android:fontFamily="@font/montserratregular"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:layout_marginTop="27dp"
            app:layout_constraintEnd_toEndOf="@+id/window"
            app:layout_constraintStart_toStartOf="@+id/window"
            app:layout_constraintTop_toBottomOf="@+id/editName" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEditPet"
            android:layout_width="230dp"
            android:layout_height="47dp"
            android:background="@drawable/whitebutton"
            android:fontFamily="@font/montserratregular"
            android:text="@string/button_editpet"
            android:textColor="@color/brown"
            android:textSize="16sp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/window"
            app:layout_constraintStart_toStartOf="@+id/window"
            app:layout_constraintTop_toBottomOf="@+id/editBirthday" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>