<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.view.fragments.NewTodoFragment">

    <TextView
        android:id="@+id/title_newpet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserratblack"
        android:text="@string/title_newtodo"
        android:textColor="@color/brown"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_marginTop="39dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/window"
        android:layout_width="324dp"
        android:layout_height="537dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/grey_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_newpet">

        <EditText
            android:id="@+id/editText"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_text"
            android:maxLines="2"
            android:fontFamily="@font/montserratregular"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="@+id/window"
            app:layout_constraintStart_toStartOf="@+id/window"
            app:layout_constraintTop_toTopOf="@+id/window" />
        <EditText
            android:id="@+id/editDate"
            android:focusable="false"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:maxLines="1"
            android:hint="@string/hint_date"
            android:fontFamily="@font/montserratregular"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:layout_marginTop="27dp"
            app:layout_constraintEnd_toEndOf="@+id/window"
            app:layout_constraintStart_toStartOf="@+id/window"
            app:layout_constraintTop_toBottomOf="@+id/editText" />
        <EditText
            android:id="@+id/editTime"
            android:focusable="false"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/hint_time"
            android:maxLines="1"
            android:fontFamily="@font/montserratregular"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:layout_marginTop="27dp"
            app:layout_constraintEnd_toEndOf="@+id/window"
            app:layout_constraintStart_toStartOf="@+id/window"
            app:layout_constraintTop_toBottomOf="@+id/editDate" />
        <TextView
            android:id="@+id/txtChoose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratregular"
            android:text="@string/choose_icon"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/editTime"
            app:layout_constraintStart_toStartOf="parent" />

        <edu.mirea.tanpii.petit.ToggleButtonGroupTableLayout
            android:id="@+id/chooseIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtChoose">
            <TableRow>
                <RadioButton
                    android:id="@+id/radioStandard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:onClick="onRadioButtonClicked"
                    android:drawableRight="@drawable/standard_icon"/>
                <RadioButton
                    android:id="@+id/radioWalk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:onClick="onRadioButtonClicked"
                    android:drawableRight="@drawable/walk_icon"/>
                <RadioButton
                    android:id="@+id/radioPlay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:onClick="onRadioButtonClicked"
                    android:drawableRight="@drawable/play_icon"/>
                <RadioButton
                    android:id="@+id/radioEat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:onClick="onRadioButtonClicked"
                    android:drawableRight="@drawable/eat_icon"/>
            </TableRow>
            <TableRow>
                <RadioButton
                    android:id="@+id/radioMedicine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:onClick="onRadioButtonClicked"
                    android:drawableRight="@drawable/medicine_icon"/>
                <RadioButton
                    android:id="@+id/radioBirthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:onClick="onRadioButtonClicked"
                    android:drawableRight="@drawable/birthday_icon"/>
                <RadioButton
                    android:id="@+id/radioGrooming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:onClick="onRadioButtonClicked"
                    android:drawableRight="@drawable/grooming_icon"/>
                <RadioButton
                    android:id="@+id/radioCleaning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:onClick="onRadioButtonClicked"
                    android:drawableRight="@drawable/cleaning_icon"/>
            </TableRow>
        </edu.mirea.tanpii.petit.ToggleButtonGroupTableLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNewTodo"
            android:layout_width="230dp"
            android:layout_height="47dp"
            android:background="@drawable/whitebutton"
            android:fontFamily="@font/montserratregular"
            android:text="@string/button_newpet"
            android:textColor="@color/brown"
            android:textSize="16sp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/window"
            app:layout_constraintStart_toStartOf="@+id/window"
            app:layout_constraintTop_toBottomOf="@+id/chooseIcon" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>